# real-time-recommendations

./: .gitignore  README.md  TEST_README.md  config.py  env.example  example_usage.py  fullflow.py  main.py  microphone_stream.py  pyproject.toml  requirements.txt  stream_audio.py  test_instructor_integration.py  topic_manager.py  transcriber.py  transcript_buffer.py  transcript_buffer_chunker.py
