[project]
name = "real-time-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-cloud-texttospeech>=2.31.0",
    "google-genai>=1.41.0",
    "google-generativeai>=0.8.5",
    "vertexai>=1.71.1",
]
